# ai-movies-buddy

./: .gitignore  README.md  agent_runner.py  pyproject.toml
movies_buddy/: __init__.py
movies_buddy/agents/: __init__.py  movies_buddy_agent.py
movies_buddy/prompts/: __init__.py  system_prompt.py
movies_buddy/tools/: __init__.py  wikipedia_summary.py
movies_buddy/tools/mcp_servers/: __init__.py
movies_buddy/tools/mcp_servers/tvdb/: helper.py  server.py
movies_buddy/utils/: __init__.py  env.py
